# HpcPlayer

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hpcplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/hpc_player/: HpcPlayer.cpp  HpcPlayer.h  HpcPlayerInternal.cpp  HpcPlayerInternal.h
app/src/main/cpp/hpc_player/decoder/: DecoderBase.cpp  DecoderBase.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  MediaCodecAudioDecoder.cpp  MediaCodecAudioDecoder.h  MediaCodecDecoder.cpp  MediaCodecDecoder.h  MediaCodecVideoDecoder.cpp  MediaCodecVideoDecoder.h
app/src/main/cpp/hpc_player/extractor/: Extractor.h  FFmpegExtractor.cpp  FFmpegExtractor.h
app/src/main/cpp/hpc_player/foundation/: BaseType.h  Error.h  Handler.cpp  Handler.h  Log.h  Looper.cpp  Looper.h  MediaClock.cpp  MediaClock.h  MediaFormat.h  Message.cpp  Message.h  MetaData.cpp  MetaData.h  Surface.cpp  Surface.h
app/src/main/cpp/hpc_player/render/: MediaCodecVideoRenderer.cpp  MediaCodecVideoRenderer.h  OpenSLAudioSink.cpp  OpenSLAudioSink.h  Rendered.h
app/src/main/cpp/hpc_player/source/: DefaultSource.cpp  DefaultSource.h  Source.cpp  Source.h
app/src/main/res/drawable/: ic_fullscreen.xml  ic_fullscreen_exit.xml
app/src/main/res/layout/: activity_player.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
